src/objects/CatalogoSubsecciones__c.object
<CustomObject>
    <fields>
        <fullName>ExternalIdSubsec_c__c</fullName>
        <defaultValue>2</defaultValue>
        <externalId>true</externalId>
        <label>ExternalIdSubsec__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Número</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catálogo Subsección</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Número de Catálogo Subsección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catálogo Subsecciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>